[project]
name = "orbit-scheduler"
version = "2.0.0"
description = "R4 coordinate scoring autonomous task scheduler"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"

[project.scripts]
orbit = "src.orbit_cli:main"

[project.optional-dependencies]
postgres = ["psycopg2-binary"]
